config/samples/gateway_v1alpha2_gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: gatewayclass-sample
  namespace: stunner
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: gatewayconfig-sample
    namespace: stunner
  description: |
    STUNner is a WebRTC ingress gateway for Kubernetes
