config/samples/gateway_v1alpha2_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway-sample
  namespace: stunner
spec:
  gatewayClassName: gatewayclass-sample
  listeners:
    - name: sample-listener-udp
      port: 3478
      protocol: UDP
    - name: sample-listener-tcp
      port: 3478
      protocol: TCP
